Agregar nuevos estilos de hover al componente ImmunizationPlanBuilder y actualizar traducciones para mejorar la experiencia del usuario.

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,5 +1,6 @@
 {
   "accidentOrTrauma": "Accidente o Trauma",
+  "action": "Acción",
   "actions": "Acciones",
   "activeCases": "Casos activos",
   "add": "Agregar",
@@ -10,10 +11,12 @@
   "addPNSContact": "Agregar Contacto PNS",
   "addRelationship": "Agregar relación",
   "address": "Dirección",
+  "addVaccine": "Agregar Vacuna",
   "admissionDate": "Fecha de Ingreso",
   "admissionWard": "Sala de Ingreso",
   "admittingDoctor": "Médico Admisor",
   "age": "Edad",
+  "ageRange": "{{min}}-{{max}} m",
   "alcoholUse": "Consumo de Alcohol",
   "alcoholUseDuration": "Duración de Consumo de Alcohol",
   "alive": "Vivo",
@@ -49,6 +52,7 @@
   "completed": "Completado",
   "completedDocumentations": "Documentación Completada",
   "comprehensiveCareFollowUp": "Seguimiento de Atención Integral",
+  "conditional": "Conditional",
   "confirmAppointment": "Confirmar Cita",
   "confirmationQuestion": "¿Está seguro de que desea eliminar la relación?",
   "contact": "Contacto",
@@ -85,6 +89,7 @@
   "dose": "Dosis",
   "edadGestacional": "Edad Gestacional (semanas)",
   "edit": "Editar",
+  "editDose": "Edit Dose Details",
   "editEncounter": "Editar",
   "editForm": "Editar Formulario",
   "editThisEncounter": "Editar este encuentro",
@@ -102,6 +107,7 @@
   "epicrisis": "Epicrisis",
   "error": "Error",
   "errorFetchingbedInformation": "Error al obtener información de camas",
+  "errorLoadingConcepts": "Error loading vaccination concepts",
   "evaluationOrdersNotes": "Valoración, Órdenes y Exámenes",
   "facility": "Establecimiento",
   "failedDeleting": "no se pudo eliminar",
@@ -134,6 +140,7 @@
   "htsResult": "Resultado final",
   "htsScreening": "Tamizaje HTS",
   "htsTestType": "Tipo de prueba",
+  "immunizationPlan": "Esquema de Vacunación",
   "inactiveCases": "Casos Inactivos",
   "inPatient": "Paciente Internado",
   "inPatientForms": "Formularios de Paciente Internado",
@@ -225,19 +232,26 @@
   "relationshipErrorMessage": "Solicitud Fallida",
   "relationshipType": "Tipo de Relación",
   "relationToPatient": "Relación con el paciente",
+  "remove": "Remove dose",
+  "removeVaccine": "Eliminar Vacuna",
   "reportingMonth": "Mes reportado",
   "reportingYear": "Año reportado",
+  "required": "Required",
   "RlshipError": "Falla en la solicitud...",
   "save": "Guardar",
   "savedRelationship": "Relación terminada exitosamente",
   "savedRlship": "Relación guardada con éxito",
+  "saveReminder": "Remember to save your changes",
   "saveRlship": "Guardar Relación",
+  "saveSchema": "Guardar Esquema",
   "scheduleVaccination": "Programar Cita de Vacunación",
   "schemaBuilder": "Vaccination Schema Builder",
   "searchConcepts": "Search Concepts",
   "searchError": "An error occurred while searching.",
+  "searchHelper": "Search and select a vaccine to add",
   "searchSchemas": "Search Schemas",
   "searchVaccination": "Search Vaccine",
+  "searchVaccine": "Buscar vacuna",
   "searchVaccines": "Search Vaccines",
   "selectConcept": "Select a Concept",
   "selectDateAndTime": "Selecciona una fecha y hora para la cita",
@@ -274,6 +288,7 @@
   "tracingNumber": "N° de Seguimiento",
   "tracingType": "Tipo de Seguimiento",
   "typeOfSurgery": "Tipo de Cirugía",
+  "unsavedChanges": "Unsaved Changes",
   "updateForm": "Modificar formulario",
   "uterusCondition": "Condición uterina PPH",
   "uuid": "UUID",
