custom calendar of single appointments

--- a/translations/en.json
+++ b/translations/en.json
@@ -44,6 +44,7 @@
   "causeOfDeath": "Causa de Muerte",
   "cervicalDilation": "Dilatación Cervical (cm)",
   "chartView": "Vista Gráfica",
+  "handleAppointment": "Atender Cita",
   "chronicDisease": "Enfermedad Crónica",
   "clean": "Clean",
   "clientEligibility": "Elegible",
