mejora de tipos y limpieza de importaciones en componentes de calendario y calculadora de fecha de nacimiento

--- a/translations/en.json
+++ b/translations/en.json
@@ -44,7 +44,6 @@
   "causeOfDeath": "Causa de Muerte",
   "cervicalDilation": "Dilatación Cervical (cm)",
   "chartView": "Vista Gráfica",
-  "handleAppointment": "Atender Cita",
   "chronicDisease": "Enfermedad Crónica",
   "clean": "Clean",
   "clientEligibility": "Elegible",
@@ -134,6 +133,7 @@
   "fromAge": "Desde Edad",
   "gestationalSize": "Tamaño Gestacional",
   "GraficasObstétricas": "Graficas Obstétricas",
+  "handleAppointment": "Atender Cita",
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
   "htsClinicalView": "Vista Clínica HTS",
@@ -141,7 +141,9 @@
   "htsResult": "Resultado final",
   "htsScreening": "Tamizaje HTS",
   "htsTestType": "Tipo de prueba",
+  "immunization": "Immunization",
   "immunizationPlan": "Esquema de Vacunación",
+  "immunizationPlanBuilder": "Immunization Plan Management",
   "inactiveCases": "Casos Inactivos",
   "inPatient": "Paciente Internado",
   "inPatientForms": "Formularios de Paciente Internado",
@@ -175,10 +177,13 @@
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Resumen Neonatal",
   "newbornCare": "Atención del Recién Nacido",
+  "next": "Next",
+  "nextMonth": "Next month",
   "nextVisitDate": "Próxima fecha de visita",
   "no": "No",
   "noActiveCasesToDisplay": "No hay datos de casos activos para mostrar.",
   "noContactToDisplay": "No hay datos de contacto para mostrar",
+  "noDose": "No Dose",
   "noEncounters": "No se encontraron encuentros",
   "noEncounterToDisplay": "No hay encuentros para mostrar",
   "noInActiveCasesToDisplay": "No hay datos de casos inactivos para mostrar.",
@@ -220,6 +225,8 @@
   "pphCondition": "PPH presente",
   "preferedPNSAproach": "Enfoque PNS Preferido",
   "presentación": "Presentación (C/P/NA)",
+  "prev": "Prev",
+  "previousMonth": "Previous month",
   "primaryDiagnosis": "Diagnóstico Primario",
   "priorityOfAdmission": "Prioridad de Ingreso",
   "provider": "Proveedor",
