--- a/translations/es.json
+++ b/translations/es.json
@@ -140,7 +140,9 @@
   "htsResult": "Resultado final",
   "htsScreening": "Tamizaje HTS",
   "htsTestType": "Tipo de prueba",
+  "immunization": "Immunization",
   "immunizationPlan": "Esquema de Vacunación",
+  "immunizationPlanBuilder": "Immunization Plan Management",
   "inactiveCases": "Casos Inactivos",
   "inPatient": "Paciente Internado",
   "inPatientForms": "Formularios de Paciente Internado",
@@ -174,10 +176,13 @@
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Resumen Neonatal",
   "newbornCare": "Atención del Recién Nacido",
+  "next": "Next",
+  "nextMonth": "Next month",
   "nextVisitDate": "Próxima fecha de visita",
   "no": "No",
   "noActiveCasesToDisplay": "No hay datos de casos activos para mostrar.",
   "noContactToDisplay": "No hay datos de contacto para mostrar",
+  "noDose": "No Dose",
   "noEncounters": "No se encontraron encuentros",
   "noEncounterToDisplay": "No hay encuentros para mostrar",
   "noInActiveCasesToDisplay": "No hay datos de casos inactivos para mostrar.",
@@ -219,6 +224,8 @@
   "pphCondition": "PPH presente",
   "preferedPNSAproach": "Enfoque PNS Preferido",
   "presentación": "Presentación (C/P/NA)",
+  "prev": "Prev",
+  "previousMonth": "Previous month",
   "primaryDiagnosis": "Diagnóstico Primario",
   "priorityOfAdmission": "Prioridad de Ingreso",
   "provider": "Proveedor",
