Actualizar yarn.lock y agregar nuevas traducciones en en.json

--- a/translations/en.json
+++ b/translations/en.json
@@ -5,6 +5,7 @@
   "activeCases": "Casos activos",
   "add": "Agregar",
   "addCase": "Agregar caso",
+  "addCredControl": "Agregar Control CRED",
   "additionalHealthServices": "Prestaciones Adicionales de Salud",
   "addNewVaccine": "Add new vaccine",
   "addPeer": "Agregar Par",
@@ -26,8 +27,18 @@
   "Antecedentes": "Antecedentes",
   "antenatalCare": "Control Prenatal",
   "apgarScore": "Puntaje Apgar",
+  "appointmentCancelError": "Error cancelling appointment",
+  "appointmentCancelled": "Appointment cancelled",
+  "appointmentCancelledSuccessfully": "Appointment cancelled successfully",
+  "appointmentCheckedIn": "Appointment Checked In",
+  "appointmentMarkedChecked": "Appointment marked as Checked In",
+  "appointments": "Appointments",
+  "appointmentToFulfill": "Select appointment to fulfill",
+  "appointmentType": "Appointment type",
   "AtencionesPrenatales": "Atenciones Prenatales",
+  "atencionInmediata": "Atención Inmediata del RN",
   "babyGivenVitaminD": "Vitamina K Administrada al Bebé",
+  "back": "Back",
   "baselineHivStatus": "Estado VIH Basal",
   "baselineInformation": "Información Basal",
   "baselineStatus": "Estado VIH",
@@ -38,6 +49,8 @@
   "bloodTransfusion": "Transfusión de Sangre",
   "calculateBirthDate": "Calcular fecha de nacimiento",
   "cancel": "Cancel",
+  "cancelAppointment": "Cancel appointment",
+  "cancelAppointmentModalConfirmationText": "Are you sure you want to cancel this appointment?",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagemet": "Gestión de Casos",
   "caseManager": "Gestor de Casos",
@@ -50,18 +63,23 @@
   "clinicalEncounter": "Encuentro Clínico",
   "clinicalViews": "Vistas clínicas",
   "completed": "Completado",
+  "completedCheckups": "Controles realizados",
   "completedDocumentations": "Documentación Completada",
   "comprehensiveCareFollowUp": "Seguimiento de Atención Integral",
+  "concept": "Concept",
   "conditional": "Conditional",
   "confirmAppointment": "Confirmar Cita",
   "confirmationQuestion": "¿Está seguro de que desea eliminar la relación?",
+  "consejeriaLactancia": "Consejería Lactancia Materna",
   "contact": "Contacto",
   "contactCreated": "Contacto creado",
   "contacted": "Contactado",
   "contactList": "Lista de contactos",
   "credControl": "Control CRED",
+  "credSchedule": "Seguimiento CRED",
   "CronogramaPrenatal": "Cronograma Prenatal",
   "Cuidado prenatal": "Cuidado prenatal",
+  "currentAge": "Edad actual",
   "customViews": "En esta sección encontrarás vistas clínicas personalizadas según condiciones del paciente y programas de atención.",
   "date": "Fecha",
   "dateDate": "Fecha y hora",
@@ -70,6 +88,7 @@
   "dateofend": "Fecha de Finalización",
   "dateofstart": "Fecha de Inicio",
   "dateOfSurgery": "Fecha de Cirugía",
+  "datetime": "Date & Time",
   "dead": "Fallecido",
   "defaulterTracing": "Seguimiento de Incumplidores",
   "delete": "Eliminar",
@@ -87,8 +106,10 @@
   "discontinue": "Descontinuar",
   "discontinued": "Descontinuado",
   "dose": "Dosis",
+  "dueAt": "A los",
   "edadGestacional": "Edad Gestacional (semanas)",
   "edit": "Editar",
+  "editAppointment": "Edit an appointment",
   "editDose": "Edit Dose Details",
   "editEncounter": "Editar",
   "editForm": "Editar Formulario",
@@ -108,11 +129,16 @@
   "error": "Error",
   "errorFetchingbedInformation": "Error al obtener información de camas",
   "errorLoadingConcepts": "Error loading vaccination concepts",
+  "EV": {
+    " Rec / 24h": ""
+  },
+  "evaluacionInmediata": "Evaluación del Recién Nacido",
   "evaluationOrdersNotes": "Valoración, Órdenes y Exámenes",
   "facility": "Establecimiento",
   "failedDeleting": "no se pudo eliminar",
   "family": "Familia",
   "familyContacts": "Contactos familiares",
+  "Fecha de ingreso": "",
   "fechaYHoraAtencion": "Fecha y hora atención",
   "feedingOrders": "Órdenes de Alimentación",
   "feedingStatus": "Estado de Alimentación",
@@ -136,6 +162,7 @@
   "handleAppointment": "Atender Cita",
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
+  "Hora de ingreso": "",
   "htsClinicalView": "Vista Clínica HTS",
   "htsInitial": "Prueba Inicial HTS",
   "htsResult": "Resultado final",
@@ -150,6 +177,7 @@
   "inPatientSummary": "Resumen de Paciente Internado",
   "inPatientView": "Vista de Paciente Internado",
   "inPatientVisitMessage": "encuentro de paciente interno encontrado para la visita actual {{visitType}}",
+  "interpretation": "Interpretation",
   "ipvOutcome": "Resultado de IPV",
   "ipvOutCome": "Resultado de IPV",
   "ipvQuestions": "Preguntas IPV",
@@ -158,6 +186,7 @@
   "listingDate": "Fecha de registro",
   "livingWithClient": "Convive con el paciente",
   "loading": "Loading",
+  "location": "Location",
   "male": "Hombre",
   "managePeers": "Gestionar Pares",
   "manager": "Gestor de casos",
@@ -169,6 +198,7 @@
   "middleName": "Segundo nombre",
   "missedAppointmentDate": "Fecha de Cita Incumplida",
   "modeOfDelivery": "Modalidad del Parto",
+  "months": "meses",
   "motherGeneralCondition": "Condición general de la madre",
   "name": "Nombre",
   "names": "Nombres",
@@ -176,26 +206,35 @@
   "neonatalCare": "Cuidado Neonatal",
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Resumen Neonatal",
+  "newbornBalanceHeader": "Newborn Balance",
   "newbornCare": "Atención del Recién Nacido",
+  "newCredEncounter": "Nuevo Control CRED",
   "next": "Next",
   "nextMonth": "Next month",
   "nextVisitDate": "Próxima fecha de visita",
   "no": "No",
   "noActiveCasesToDisplay": "No hay datos de casos activos para mostrar.",
   "noContactToDisplay": "No hay datos de contacto para mostrar",
+  "noCurrentAppointments": "There are no appointments scheduled for today to display for this patient",
+  "noData": "No data available",
   "noDose": "No Dose",
   "noEncounters": "No se encontraron encuentros",
   "noEncounterToDisplay": "No hay encuentros para mostrar",
   "noInActiveCasesToDisplay": "No hay datos de casos inactivos para mostrar.",
   "nonCredControl": "Control No CRED",
   "noObservationsFound": "No se encontraron observaciones",
+  "noPastAppointments": "There are no past appointments to display for this patient",
   "nopeers": "No hay pares para mostrar para este educador de pares",
   "noSchemas": "No schemas available",
   "noSearchItems": "No vaccines found",
+  "notes": "Notes",
+  "noUpcomingAppointments": "No upcoming appointments found",
+  "noUpcomingAppointmentsForPatient": "There are no upcoming appointments to display for this patient",
   "Nueva Atención Prenatal": "Nueva Atención Prenatal",
   "onDate": "En la fecha",
   "operatingDoctor": "Médico Operador",
   "optional": "opcional",
+  "Orina / 24h": "",
   "other": "Otro",
   "otherRelationships": "Otras Relaciones",
   "otherSubstanceAbuse": "Consumo de Otras Sustancias",
@@ -203,6 +242,7 @@
   "partograph": "Partograma",
   "partographData": "Componentes Vitales",
   "partographyDisplay": "Partograma mostrado",
+  "past": "Past",
   "patient": "Paciente",
   "patientNotFound": "Paciente no encontrado",
   "patientPlaceHolder": "Buscar paciente",
@@ -212,6 +252,7 @@
   "peers": "Pares",
   "pending": "Pendiente",
   "pendingDocumentations": "Documentación Pendiente",
+  "perinatal": "Inscripción Materno Perinatal",
   "phoneNumber": "Número de teléfono",
   "physicalAssault": "1. ¿Alguna vez él/ella lo ha golpeado, pateado, abofeteado u ocasionado daño físico de otra forma?",
   "placeOfDelivery": "Lugar del Parto",
@@ -265,6 +306,7 @@
   "selectDateAndTime": "Selecciona una fecha y hora para la cita",
   "selectSchema": "Select a Schema",
   "selectVaccine": "Select a Vaccine",
+  "service": "Service",
   "sex": "Sexo",
   "sexualAssault": "3. ¿Alguna vez él/ella le ha obligado a hacer algo sexual que le haya hecho sentir incómodo/a?",
   "sinAtenciones": "Atenciones prenatales",
@@ -291,12 +333,19 @@
   "therapiesPrescribed": "Terapias Recetadas",
   "threatened": "2. ¿Alguna vez él/ella ha amenazado con hacerle daño?",
   "timeRecorded": "Hora Registrada",
+  "today": "Today",
   "total": "Total",
   "totalPeers": "Total de Pares",
   "tracingNumber": "N° de Seguimiento",
   "tracingType": "Tipo de Seguimiento",
+  "Turno": "",
+  "type": "Type",
   "typeOfSurgery": "Tipo de Cirugía",
   "unsavedChanges": "Unsaved Changes",
+  "upcoming": "Upcoming",
+  "upcomingAppointments": "Upcoming appointments",
+  "upcomingCheckups": "Próximos controles",
+  "updateError": "Error updating upcoming appointment",
   "updateForm": "Modificar formulario",
   "uterusCondition": "Condición uterina PPH",
   "uuid": "UUID",
@@ -304,9 +353,11 @@
   "vaccinationScheduleBuilder": "Agenda de Vacunación",
   "vaccine": "Vacuna",
   "vaccineCalendar": "Calendario de Vacunas del Niño",
+  "value": "Value",
   "viewBeds": "Ver camas",
   "viewEncounter": "Ver",
   "visitDate": "Fecha de Tamizaje",
+  "vitalsNewborn": "Monitoreo del Recién Nacido",
   "weight": "Peso (kg)",
   "yes": "Sí"
 }
