--- a/translations/es.json
+++ b/translations/es.json
@@ -1,4 +1,5 @@
 {
+  "abnormalValue": "Valor anormal",
   "accidentOrTrauma": "Accidente o Trauma",
   "action": "Acción",
   "actions": "Acciones",
@@ -24,7 +25,12 @@
   "all": "Todos",
   "alturaUterina": "Altura Uterina (cm)",
   "ancVisitNumber": "Número de Visita de Control Prenatal",
+  "Antecedente": "Antecedente",
+  "antecedentes": "",
   "Antecedentes": "Antecedentes",
+  "Antecedentes maternos": "Antecedentes maternos",
+  "antecedentesFamiliares": "Antecedentes Familiares",
+  "antecedentesPersonales": "Antecedentes Personales",
   "antenatalCare": "Control Prenatal",
   "apgarScore": "Puntaje Apgar",
   "appointmentCancelError": "Error cancelling appointment",
@@ -51,6 +57,7 @@
   "cancel": "Cancel",
   "cancelAppointment": "Cancel appointment",
   "cancelAppointmentModalConfirmationText": "Are you sure you want to cancel this appointment?",
+  "Captada": "Captada",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagemet": "Gestión de Casos",
   "caseManager": "Gestor de Casos",
@@ -79,6 +86,7 @@
   "credSchedule": "Seguimiento CRED",
   "CronogramaPrenatal": "Cronograma Prenatal",
   "Cuidado prenatal": "Cuidado prenatal",
+  "Current pregnancy": "Embarazo actual",
   "currentAge": "Edad actual",
   "customViews": "En esta sección encontrarás vistas clínicas personalizadas según condiciones del paciente y programas de atención.",
   "date": "Fecha",
@@ -97,6 +105,7 @@
   "deliveryOutcome": "Resultado del Parto",
   "demographics": "Datos demográficos",
   "department": "Departamento",
+  "deposicionesGramos": "Deposiciones (g)",
   "descentOfHead": "Descenso de la Cabeza",
   "disabilities": "Discapacidades",
   "discard": "Descartar",
@@ -107,13 +116,17 @@
   "discontinued": "Descontinuado",
   "dose": "Dosis",
   "dueAt": "A los",
+  "EcografíaObstetriciala": "Ecografía de obstetricia",
   "edadGestacional": "Edad Gestacional (semanas)",
+  "EdadgestacionalactualFUM": "Edad gestacional actual FUM",
   "edit": "Editar",
   "editAppointment": "Edit an appointment",
   "editDose": "Edit Dose Details",
   "editEncounter": "Editar",
   "editForm": "Editar Formulario",
+  "edith": "Editar",
   "editThisEncounter": "Editar este encuentro",
+  "EmbarazoActual": "Embarazo Actual",
   "encounterDate": "Fecha",
   "encounterDeleted": "Encuentro eliminado",
   "encounterDetails": "Detalles del encuentro",
@@ -134,16 +147,19 @@
   },
   "evaluacionInmediata": "Evaluación del Recién Nacido",
   "evaluationOrdersNotes": "Valoración, Órdenes y Exámenes",
+  "Examendecuellouterino": "Examen de cuello uterino",
   "facility": "Establecimiento",
   "failedDeleting": "no se pudo eliminar",
   "family": "Familia",
   "familyContacts": "Contactos familiares",
   "Fecha de ingreso": "",
+  "fechaEmbarazo anterior": "Fecha del embarazo anterior",
   "fechaYHoraAtencion": "Fecha y hora atención",
   "feedingOrders": "Órdenes de Alimentación",
   "feedingStatus": "Estado de Alimentación",
   "female": "Mujer",
   "fetalHeartRate": "Frecuencia Cardíaca Fetal",
+  "FichaTamizaje": "Ficha Tamizaje",
   "filterByForm": "Filtrar por formulario",
   "filterByStatus": "Filtrar por estado",
   "filterTable": "Filtrar tabla",
@@ -151,14 +167,17 @@
   "finalDischargeDiagnosis": "Diagnóstico Final al Alta",
   "finalOutcome": "Resultado Final",
   "firstName": "Nombre",
+  "fluidBalance": "Balance de Líquidos",
   "foetalPresentation": "Presentación Fetal",
   "followUpDate": "Próxima fecha de seguimiento",
   "formName": "Nombre del Formulario",
   "formTitle": "Complete los detalles del formulario",
   "frecuenciaCardiacaFetal": "Frecuencia cardiaca fetal (por min.)",
+  "frecuenciaRespiratoria": "Frecuencia Respiratoria (rpm)",
   "fromAge": "Desde Edad",
   "gestationalSize": "Tamaño Gestacional",
   "GraficasObstétricas": "Graficas Obstétricas",
+  "hepatitisB": "Hepatitis B",
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
   "Hora de ingreso": "",
@@ -178,8 +197,10 @@
   "inPatientVisitMessage": "encuentro de paciente interno encontrado para la visita actual {{visitType}}",
   "interpretation": "Interpretation",
   "ipvOutcome": "Resultado de IPV",
+  "ipvOutCome": "IPV Outcome",
   "ipvQuestions": "Preguntas IPV",
   "labourAndDelivery": "Trabajo de Parto y Parto",
+  "lactanciaMaterna": "Lactancia materna",
   "lastName": "Apellido",
   "listingDate": "Fecha de registro",
   "livingWithClient": "Convive con el paciente",
@@ -193,6 +214,9 @@
   "maternalCondition": "Condición Materna",
   "maternalSummary": "Resumen Materno",
   "medicalHistory": "Historial Médico",
+  "MesgestaciónprimeraAntitetánica": "Mes de gestación de la primera vacunación antitetánica",
+  "MesgestaciónsegundaAntitetánica": "Mes de gestación de la segunda vacunación antitetánica",
+  "miccionesGramos": "Micciones (g/mL)",
   "middleName": "Segundo nombre",
   "missedAppointmentDate": "Fecha de Cita Incumplida",
   "modeOfDelivery": "Modalidad del Parto",
@@ -202,6 +226,7 @@
   "names": "Nombres",
   "neonatalAbnormalities": "Anormalidades Neonatales",
   "neonatalCare": "Cuidado Neonatal",
+  "NeonatalMonitoring": "Monitoreo de Funciones Vitales",
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Resumen Neonatal",
   "newbornBalanceHeader": "Newborn Balance",
@@ -229,6 +254,9 @@
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "There are no upcoming appointments to display for this patient",
   "Nueva Atención Prenatal": "Nueva Atención Prenatal",
+  "numeroDeposiciones": "N° Deposiciones",
+  "numeroMicciones": "N° Micciones",
+  "numeroVomito": "N° Vómitos",
   "onDate": "En la fecha",
   "operatingDoctor": "Médico Operador",
   "optional": "opcional",
@@ -251,9 +279,11 @@
   "pending": "Pendiente",
   "pendingDocumentations": "Documentación Pendiente",
   "perinatal": "Inscripción Materno Perinatal",
+  "pesoMadre": "Peso Madre(kg)",
   "phoneNumber": "Número de teléfono",
   "physicalAssault": "1. ¿Alguna vez él/ella lo ha golpeado, pateado, abofeteado u ocasionado daño físico de otra forma?",
   "placeOfDelivery": "Lugar del Parto",
+  "pleaseFillField": "Por favor, complete al menos un campo",
   "pnsAproach": "Enfoque PNS",
   "pnsContacts": "Contactos PNS",
   "populationType": "Tipo de población",
@@ -264,6 +294,7 @@
   "pphCondition": "PPH presente",
   "preferedPNSAproach": "Enfoque PNS Preferido",
   "presentación": "Presentación (C/P/NA)",
+  "presionSistolica": "Presión Sistólica (mmHg)",
   "prev": "Prev",
   "previousMonth": "Previous month",
   "primaryDiagnosis": "Diagnóstico Primario",
@@ -271,6 +302,7 @@
   "provider": "Proveedor",
   "recommendedProcedure": "Procedimiento Recomendado",
   "recordLabourDetails": "Registrar detalles del parto",
+  "recordNewbornVitals": "Registrar signos vitales neonatales",
   "referrals": "Derivaciones",
   "relation": "Parentesco",
   "relationship": "Relación",
@@ -285,6 +317,8 @@
   "reportingYear": "Año reportado",
   "required": "Required",
   "RlshipError": "Falla en la solicitud...",
+  "rubeola": "Rubeola",
+  "saturacionOxigeno": "Saturación O₂ (%)",
   "save": "Guardar",
   "savedRelationship": "Relación terminada exitosamente",
   "savedRlship": "Relación guardada con éxito",
@@ -322,6 +356,8 @@
   "surgicalSummary": "Resumen Quirúrgico",
   "tableView": "Vista de Tabla",
   "tbScreening": "Resultado de tamizaje de TB",
+  "temperatura": "Temperatura (°C)",
+  "terminaciónGestaciónAnterior": "Terminación de gestación anterior",
   "testApproach": "Enfoque de prueba",
   "testDate": "Fecha de Prueba",
   "testEntryPoint": "Punto de entrada",
@@ -351,11 +387,17 @@
   "vaccinationScheduleBuilder": "Agenda de Vacunación",
   "vaccine": "Vacuna",
   "vaccineCalendar": "Calendario de Vacunas del Niño",
+  "VacunaciónFiebreAmarilla": "Vacunación fiebre Amarilla",
+  "validationInputError": "El valor debe estar entre {{min}} y {{max}}",
+  "Valor": "Valor",
   "value": "Value",
+  "VExamenpélvico": "Examen pélvico",
   "viewBeds": "Ver camas",
   "viewEncounter": "Ver",
   "visitDate": "Fecha de Tamizaje",
+  "vitalSigns": "Signos Vitales",
   "vitalsNewborn": "Monitoreo del Recién Nacido",
+  "vomitoGramosML": "Vómito (g/mL)",
   "weight": "Peso (kg)",
   "yes": "Sí"
 }
