Agregar nuevas traducciones y actualizar textos en archivos de traducción

--- a/translations/en.json
+++ b/translations/en.json
@@ -82,6 +82,7 @@
   "contactCreated": "Contacto creado",
   "contacted": "Contactado",
   "contactList": "Lista de contactos",
+  "createPatient": "Crear Paciente",
   "credControl": "Control CRED",
   "credSchedule": "Seguimiento CRED",
   "CronogramaPrenatal": "Cronograma Prenatal",
@@ -107,6 +108,7 @@
   "department": "Departamento",
   "deposicionesGramos": "Deposiciones (g)",
   "descentOfHead": "Descenso de la Cabeza",
+  "Diagnóstico": "Diagnóstico",
   "disabilities": "Discapacidades",
   "discard": "Descartar",
   "dischargeDate": "Fecha de Alta",
@@ -115,10 +117,14 @@
   "discontinue": "Descontinuar",
   "discontinued": "Descontinuado",
   "dose": "Dosis",
+  "Drogas": "Drogas",
+  "Duda": "Duda",
   "dueAt": "A los",
+  "EcografíaObstetricia": "Ecografía de obstetricia",
   "EcografíaObstetriciala": "Ecografía de obstetricia",
   "edadGestacional": "Edad Gestacional (semanas)",
   "EdadgestacionalactualFUM": "Edad gestacional actual FUM",
+  "EdadGestacionalActualFUM": "Edad gestacional actual FUM",
   "edit": "Editar",
   "editAppointment": "Edit an appointment",
   "editDose": "Edit Dose Details",
@@ -127,6 +133,7 @@
   "edith": "Editar",
   "editThisEncounter": "Editar este encuentro",
   "EmbarazoActual": "Embarazo Actual",
+  "Emergencia paciente": "Emergencia paciente",
   "encounterDate": "Fecha",
   "encounterDeleted": "Encuentro eliminado",
   "encounterDetails": "Detalles del encuentro",
@@ -147,13 +154,19 @@
   },
   "evaluacionInmediata": "Evaluación del Recién Nacido",
   "evaluationOrdersNotes": "Valoración, Órdenes y Exámenes",
+  "ExamenClínico": "Examen clínico",
   "Examendecuellouterino": "Examen de cuello uterino",
+  "ExamenMamas": "Examen de mamas",
+  "ExamenOdontológico": "Examen odontológico",
+  "Examenpélvico": "Examen pélvico",
   "facility": "Establecimiento",
   "failedDeleting": "no se pudo eliminar",
   "family": "Familia",
   "familyContacts": "Contactos familiares",
   "Fecha de ingreso": "",
   "fechaEmbarazo anterior": "Fecha del embarazo anterior",
+  "FechaHospitalización": "Fecha de hospitalización",
+  "FechaProbableParto": "Fecha probable de parto",
   "fechaYHoraAtencion": "Fecha y hora atención",
   "feedingOrders": "Órdenes de Alimentación",
   "feedingStatus": "Estado de Alimentación",
@@ -175,6 +188,7 @@
   "frecuenciaCardiacaFetal": "Frecuencia cardiaca fetal (por min.)",
   "frecuenciaRespiratoria": "Frecuencia Respiratoria (rpm)",
   "fromAge": "Desde Edad",
+  "FUM": "FUM",
   "gestationalSize": "Tamaño Gestacional",
   "GraficasObstétricas": "Graficas Obstétricas",
   "handleAppointment": "Atender Cita",
@@ -182,11 +196,13 @@
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
   "Hora de ingreso": "",
+  "Hospitalización": "Hospitalización",
   "htsClinicalView": "Vista Clínica HTS",
   "htsInitial": "Prueba Inicial HTS",
   "htsResult": "Resultado final",
   "htsScreening": "Tamizaje HTS",
   "htsTestType": "Tipo de prueba",
+  "ICM": "ICM",
   "immunization": "Immunization",
   "immunizationPlan": "Esquema de Vacunación",
   "immunizationPlanBuilder": "Immunization Plan Management",
@@ -240,6 +256,8 @@
   "noContactToDisplay": "No hay datos de contacto para mostrar",
   "noCurrentAppointments": "There are no appointments scheduled for today to display for this patient",
   "noData": "No data available",
+  "noDataAvailable": "No data available",
+  "noDataAvailableDescription": "No data available",
   "noDose": "No Dose",
   "noEncounters": "No se encontraron encuentros",
   "noEncounterToDisplay": "No hay encuentros para mostrar",
@@ -264,6 +282,7 @@
   "other": "Otro",
   "otherRelationships": "Otras Relaciones",
   "otherSubstanceAbuse": "Consumo de Otras Sustancias",
+  "otrosAntecedentes": "Otros antecedentes",
   "partnerStatus": "Estado VIH de la pareja",
   "partograph": "Partograma",
   "partographData": "Componentes Vitales",
@@ -279,6 +298,7 @@
   "pending": "Pendiente",
   "pendingDocumentations": "Documentación Pendiente",
   "perinatal": "Inscripción Materno Perinatal",
+  "Peso": "Peso (Kg)",
   "pesoMadre": "Peso Madre(kg)",
   "phoneNumber": "Número de teléfono",
   "physicalAssault": "1. ¿Alguna vez él/ella lo ha golpeado, pateado, abofeteado u ocasionado daño físico de otra forma?",
@@ -298,11 +318,13 @@
   "prev": "Prev",
   "previousMonth": "Previous month",
   "primaryDiagnosis": "Diagnóstico Primario",
+  "PrimeraDosisAntitetanica": "1era dosis de vacuna antitetánica",
   "priorityOfAdmission": "Prioridad de Ingreso",
   "provider": "Proveedor",
   "recommendedProcedure": "Procedimiento Recomendado",
   "recordLabourDetails": "Registrar detalles del parto",
   "recordNewbornVitals": "Registrar signos vitales neonatales",
+  "Referida": "Referida",
   "referrals": "Derivaciones",
   "relation": "Parentesco",
   "relationship": "Relación",
@@ -334,6 +356,7 @@
   "searchVaccination": "Search Vaccine",
   "searchVaccine": "Buscar vacuna",
   "searchVaccines": "Search Vaccines",
+  "SegundaDosisAntitetanica": "2da dosis de vacuna antitetánica",
   "selectConcept": "Select a Concept",
   "selectDateAndTime": "Selecciona una fecha y hora para la cita",
   "selectSchema": "Select a Schema",
@@ -355,6 +378,7 @@
   "surgicalHistory": "Historial Quirúrgico",
   "surgicalSummary": "Resumen Quirúrgico",
   "tableView": "Vista de Tabla",
+  "Talla": "Talla",
   "tbScreening": "Resultado de tamizaje de TB",
   "temperatura": "Temperatura (°C)",
   "terminaciónGestaciónAnterior": "Terminación de gestación anterior",
@@ -388,12 +412,14 @@
   "vaccine": "Vacuna",
   "vaccineCalendar": "Calendario de Vacunas del Niño",
   "VacunaciónFiebreAmarilla": "Vacunación fiebre Amarilla",
+  "VacunaInfluencia": "Vacuna influencia",
   "validationInputError": "El valor debe estar entre {{min}} y {{max}}",
   "Valor": "Valor",
   "value": "Value",
   "VExamenpélvico": "Examen pélvico",
   "viewBeds": "Ver camas",
   "viewEncounter": "Ver",
+  "violencia": "violencia",
   "visitDate": "Fecha de Tamizaje",
   "vitalSigns": "Signos Vitales",
   "vitalsNewborn": "Monitoreo del Recién Nacido",
