agregar traducciones para métricas de balance, biometría y signos vitales

--- a/translations/en.json
+++ b/translations/en.json
@@ -45,14 +45,20 @@
   "atencionInmediata": "Atención Inmediata del RN",
   "babyGivenVitaminD": "Vitamina K Administrada al Bebé",
   "back": "Back",
+  "balanceMetricDisplayed": "Métrica de Balance de Líquidos",
+  "balanceOverview": "Balance de Líquidos",
   "baselineHivStatus": "Estado VIH Basal",
   "baselineInformation": "Información Basal",
   "baselineStatus": "Estado VIH",
   "beds": "Camas",
+  "biometricDisplayed": "Biometric displayed",
+  "biometrics_lower": "biometrics",
   "birthInjuriesTrauma": "Traumatismos/lesiones al Nacer",
   "bloodGroup": "Grupo Sanguíneo",
   "bloodLoss": "Transfusión de Sangre Realizada",
+  "bloodPressureAbbreviated": "BP",
   "bloodTransfusion": "Transfusión de Sangre",
+  "bp": "BP",
   "calculateBirthDate": "Calcular fecha de nacimiento",
   "cancel": "Cancel",
   "cancelAppointment": "Cancel appointment",
@@ -64,6 +70,8 @@
   "causeOfDeath": "Causa de Muerte",
   "cervicalDilation": "Dilatación Cervical (cm)",
   "chartView": "Vista Gráfica",
+  "checkForValidity": "Some of the values entered are invalid",
+  "chestCircumference": "Chest Circumference",
   "chronicDisease": "Enfermedad Crónica",
   "clean": "Clean",
   "clientEligibility": "Elegible",
@@ -91,6 +99,7 @@
   "currentAge": "Edad actual",
   "customViews": "En esta sección encontrarás vistas clínicas personalizadas según condiciones del paciente y programas de atención.",
   "date": "Fecha",
+  "dateAndTime": "Date and time",
   "dateDate": "Fecha y hora",
   "dateOfBirth": "Fecha de nacimiento",
   "dateOfDelivery": "Fecha de Parto",
@@ -192,6 +201,8 @@
   "gestationalSize": "Tamaño Gestacional",
   "GraficasObstétricas": "Graficas Obstétricas",
   "handleAppointment": "Atender Cita",
+  "headCircumference": "Head Circumference",
+  "height": "Height",
   "hepatitisB": "Hepatitis B",
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
@@ -245,6 +256,8 @@
   "NeonatalMonitoring": "Monitoreo de Funciones Vitales",
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Resumen Neonatal",
+  "neonatalvitalsRecorded": "Balance del recién nacido registrado",
+  "newbornAntropometrics": "Datos Antropométricos del Recien Nacido",
   "newbornBalanceHeader": "Newborn Balance",
   "newbornCare": "Atención del Recién Nacido",
   "newCredEncounter": "Nuevo Control CRED",
@@ -283,6 +296,7 @@
   "otherRelationships": "Otras Relaciones",
   "otherSubstanceAbuse": "Consumo de Otras Sustancias",
   "otrosAntecedentes": "Otros antecedentes",
+  "oxygenSaturation": "Oxygen saturation",
   "partnerStatus": "Estado VIH de la pareja",
   "partograph": "Partograma",
   "partographData": "Componentes Vitales",
@@ -338,6 +352,9 @@
   "reportingMonth": "Mes reportado",
   "reportingYear": "Año reportado",
   "required": "Required",
+  "respirationRate": "Respiration rate",
+  "respiratoryRate": "R. rate",
+  "respiratoryRateAbbreviated": "R. Rate",
   "RlshipError": "Falla en la solicitud...",
   "rubeola": "Rubeola",
   "saturacionOxigeno": "Saturación O₂ (%)",
@@ -369,18 +386,26 @@
   "smoking": "Tabaquismo",
   "smokingDuration": "Duración del Tabaquismo",
   "socialHistory": "Historial Social",
+  "spo2": "SpO2",
   "startDate": "Fecha de Inicio",
   "status": "Estado",
   "statusAtDischarge": "Estado al Alta",
+  "stoolCount": "Stool Count",
+  "stoolGrams": "Stool Weight (g)",
   "submit": "Enviar",
   "successfullyDeleted": "eliminado exitosamente",
   "summaryMonitoring": "Resumen y Monitoreo",
   "surgicalHistory": "Historial Quirúrgico",
   "surgicalSummary": "Resumen Quirúrgico",
+  "systolic": "systolic",
+  "systolicPressure": "Systolic Pressure (mmHg)",
   "tableView": "Vista de Tabla",
   "Talla": "Talla",
   "tbScreening": "Resultado de tamizaje de TB",
+  "temp": "Temp",
   "temperatura": "Temperatura (°C)",
+  "temperature": "Temperature",
+  "temperatureAbbreviated": "Temp",
   "terminaciónGestaciónAnterior": "Terminación de gestación anterior",
   "testApproach": "Enfoque de prueba",
   "testDate": "Fecha de Prueba",
@@ -405,6 +430,8 @@
   "upcomingCheckups": "Próximos controles",
   "updateError": "Error updating upcoming appointment",
   "updateForm": "Modificar formulario",
+  "urineCount": "Urine Count",
+  "urineGrams": "Urine Volume (g/mL)",
   "uterusCondition": "Condición uterina PPH",
   "uuid": "UUID",
   "vaccinationSchedule": "Calendario de Vacunación",
@@ -421,8 +448,14 @@
   "viewEncounter": "Ver",
   "violencia": "violencia",
   "visitDate": "Fecha de Tamizaje",
+  "vitals": "Signos Vitales del Recien Nacido",
+  "vitalsAndBiometricsNowAvailable": "They are now visible on the Vitals and Biometrics page",
+  "vitalsAndBiometricsSaveError": "Error guardando los datos vitals del recien nacido",
+  "vitalSignDisplayed": "Vital sign displayed",
   "vitalSigns": "Signos Vitales",
   "vitalsNewborn": "Monitoreo del Recién Nacido",
+  "vomitCount": "Vomit Count",
+  "vomitGramsML": "Vomit Volume (g/mL)",
   "vomitoGramosML": "Vómito (g/mL)",
   "weight": "Peso (kg)",
   "yes": "Sí"
