--- a/translations/es.json
+++ b/translations/es.json
@@ -457,5 +457,12 @@
   "vomitGramsML": "Vomit Volume (g/mL)",
   "vomitoGramosML": "Vómito (g/mL)",
   "weight": "Peso (kg)",
-  "yes": "Sí"
+  "yes": "Sí",
+  "genderPreselected": "El género está preseleccionado según el perfil",
+  "growthChart": "Gráfico de Crecimiento",
+  "noChartDataAvailable": "No hay datos de gráfico disponibles",
+  "print": "Imprimir",
+  "updating": "Actualizando...",
+  "Year": "Año",
+  "Years": "Años"
 }
